Ignored more build files

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,9 @@ cs203system/.sts4-cache
 /cs203system/*.ipr
 !/cs203system/.idea/
 #/cs203system/.idea/workspace.xml
-!/cs203system/build/
-!/cs203system/.gradle/
-!/cs203system/.gradle/*
+cs203system/build/*
+cs203system/.gradle/
+#/cs203system/.gradle/*
 
 ### NetBeans ###
 /cs203system/nbproject/private/
