--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -1,1 +1,97 @@
 spring.application.name=cs203system
+
+# ----------------------------------------------------------------- #
+# SPRING PROFILES #
+# ----------------------------------------------------------------- #
+# https://www.baeldung.com/spring-profiles
+# https://www.baeldung.com/spring-boot-profiles
+# https://www.baeldung.com/spring-boot-configuration-properties-vs-yaml
+
+#spring.profiles.active=dev
+
+# ----------------------------------------------------------------- #
+# DATABASE #
+# ----------------------------------------------------------------- #
+
+# Config for all connection to datasource (MySQL & PostgreSQL) (Prod/Dev)
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+#spring.datasource.username=ubuntu
+#spring.datasource.password=password
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sandbox
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.sql.init.platform=h2
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# ----------------------------------------------------------------- #
+# LOGGING #
+# ----------------------------------------------------------------- #
+
+# Turn off banner in console (Prod/Dev)
+#spring.main.banner-mode=console
+
+# Turn off logging during every startup except for warn (Dev)
+#logging.level.root=warn
+
+# Turn off Spring Open Session In View (Prod/Dev)
+#spring.jpa.open-in-view=false
+
+# Add logging configs to display SQL statements (Dev)
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.orm.jdbc.bind=trace
+#logging.level.org.hibernate.stat=debug
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Generate and log statistics (Dev)
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# Log slow queries (Dev)
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
+
+# Caching (Dev)
+#spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
+
+# (Dev)
+#server.error.include-message=always
+
+# ----------------------------------------------------------------- #
+# INITIALISING DATA VIA SQL #
+# ----------------------------------------------------------------- #
+
+# For adding initial Data via data.sql (Dev)
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Config JPA/Hibernate to auto create the tables. Only Enable for Development. Nvr turn on for Production. (Dev)
+spring.jpa.hibernate.ddl-auto=create
+
+
+# ----------------------------------------------------------------- #
+# ACTUATOR #
+# ----------------------------------------------------------------- #
+
+# Exposing/Restricting actuator url paths
+#management.endpoints.web.exposure.exclude=*
+#management.endpoints.web.exposure.include=health,info
+#management.info.env.enabled=true
+
+# For Actuator in Vscode (Dev)
+#management.endpoints.jmx.exposure.include=*
+
+# ----------------------------------------------------------------- #
+# SPRING DATA REST API #
+# ----------------------------------------------------------------- #
+#spring.data.rest.base-path=/magic-api
+#spring.data.rest.default-page-size=50
