--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -23,6 +23,11 @@ spring.application.name=cs203system
 #spring.datasource.username=postgres
 #spring.datasource.password=password
 
+# Logging Configuration
+logging.level.com.cs203.cs203system.utility=DEBUG
+logging.level.com.cs203.cs203system.utility=INFO
+
+
 # H2 Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -51,13 +56,13 @@ spring.h2.console.path=/h2-console
 #logging.level.org.hibernate.orm.jdbc.bind=trace
 #logging.level.org.hibernate.stat=debug
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Generate and log statistics (Dev)
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 
 # Log slow queries (Dev)
-spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
+#spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
 
 # Caching (Dev)
 #spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
