Fixed bug Changed the model layer

--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.application.name=cs203system
 
 # Logging Configuration
 logging.level.com.cs203.cs203system.utility=DEBUG
-logging.level.com.cs203.cs203system.utility=INFO
+#logging.level.com.cs203.cs203system.utility=INFO
 
 
 # H2 Database configuration
@@ -100,3 +100,9 @@ spring.jpa.hibernate.ddl-auto=create
 # ----------------------------------------------------------------- #
 #spring.data.rest.base-path=/magic-api
 #spring.data.rest.default-page-size=50
+
+# ----------------------------------------------------------------- #
+# SWAGGER #
+# ----------------------------------------------------------------- #
+#springfox.documentation.swagger-ui.base-url=/api-docs
+springdoc.api-docs.path=/api-docs
