Added Spring security. Disabled it for now

--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -104,5 +104,10 @@ spring.jpa.hibernate.ddl-auto=create
 # ----------------------------------------------------------------- #
 # SWAGGER #
 # ----------------------------------------------------------------- #
-#springfox.documentation.swagger-ui.base-url=/api-docs
 springdoc.api-docs.path=/api-docs
+
+# ----------------------------------------------------------------- #
+# Security #
+# ----------------------------------------------------------------- #
+spring.security.user.name=admin
+spring.security.user.password=password
