--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -106,3 +106,11 @@ spring.jpa.hibernate.ddl-auto=create
 # ----------------------------------------------------------------- #
 #springfox.documentation.swagger-ui.base-url=/api-docs
 springdoc.api-docs.path=/api-docs
+
+
+# ----------------------------------------------------------------- #
+# SERVER CONFIGURATION #
+# ----------------------------------------------------------------- #
+
+# Change the default port from 8080 to a different port to avoid conflicts
+server.port=8081
