--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -114,3 +114,10 @@ springdoc.api-docs.path=/api-docs
 #
 ## Change the default port from 8080 to a different port to avoid conflicts
 #server.port=8081
+
+#
+## ----------------------------------------------------------------- #
+## SECURITY #
+## ----------------------------------------------------------------- #
+
+
