--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -39,6 +39,15 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
+	    // Mockito Core
+    testImplementation 'org.mockito:mockito-core:5.0.0'
+
+    // Optional: For additional Mockito functionality like mocking static methods
+    testImplementation 'org.mockito:mockito-inline:5.0.0'
+
+    // Optional: If using Spring Boot Test, include this dependency for Spring integration
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 //	JWT
 //	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 //	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
