--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -119,5 +119,5 @@ springdoc.api-docs.path=/api-docs
 ## ----------------------------------------------------------------- #
 ## SECURITY #
 ## ----------------------------------------------------------------- #
-
+logging.level.org.springframework.security=DEBUG
 
