--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@types/next-auth": "^3.15.0",
     "@types/styled-components": "^5.1.34",
+    "again": "^0.0.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
