added mail classes but not implemented

--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     // Optional: If using Spring Boot Test, include this dependency for Spring integration
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// Mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 //	JWT
 //	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
