--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -121,3 +121,21 @@ springdoc.api-docs.path=/api-docs
 ## ----------------------------------------------------------------- #
 logging.level.org.springframework.security=DEBUG
 
+
+
+
+#
+## ----------------------------------------------------------------- #
+## MAIL #
+## ----------------------------------------------------------------- #
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jinjunchia99@gmail.com
+spring.mail.password=CS203Project!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+## ----------------------------------------------------------------- #
