--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 //	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 //	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 //	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	implementation 'org.projectlombok:lombok:1.18.24' // Use the latest Lombok version
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.named('test') {
