--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-jdbc'
 	implementation 'net.datafaker:datafaker:1.9.0'
 	implementation 'org.mapstruct:mapstruct:1.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	testImplementation 'org.springframework.boot:spring-b' +
 			'oot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
@@ -40,6 +42,8 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.security:spring-security-messaging'
+
 
 	    // Mockito Core
     testImplementation 'org.mockito:mockito-core:5.0.0'
