--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.session:spring-session-jdbc'
+//	implementation 'org.springframework.session:spring-session-jdbc'
 	implementation 'net.datafaker:datafaker:1.9.0'
 	implementation 'org.mapstruct:mapstruct:1.6.2'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
