--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -122,3 +122,14 @@ springdoc.api-docs.path=/api-docs
 logging.level.org.springframework.security=DEBUG
 spring.session.jdbc.initialize-schema=never
 
+
+
+
+
+
+
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.web.socket.handler=DEBUG
+logging.level.org.springframework.web.socket.server=DEBUG
+logging.level.org.springframework.messaging.simp=DEBUG
+logging.level.org.springframework.web.socket.messaging=DEBUG
