--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -122,3 +122,6 @@ springdoc.api-docs.path=/api-docs
 logging.level.org.springframework.security=DEBUG
 spring.session.jdbc.initialize-schema=never
 
+#management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
+#spring.mvc.dispatch-options-request=true
+
