--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -18,35 +18,35 @@ spring.application.name=cs203system
 #spring.datasource.username=ubuntu
 #spring.datasource.password=password
 
-spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/database-1
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/database-1
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.username=postgres
+#spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
+#spring.datasource.driver-class-name=org.postgresql.Driver
 # Specify explicitly the dialect (here for PostgreSQL, adapt for your database)
 
 
 # Disable Hibernate usage of JDBC metadata
-spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+#spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # Database initialization should typically be performed outside of Spring lifecycle
 #spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=never
+#spring.sql.init.mode=never
 
 # Logging Configuration
 logging.level.com.cs203.cs203system.utility=DEBUG
 #logging.level.com.cs203.cs203system.utility=INFO
 
-#
-## H2 Database configuration
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=1234
-##spring.sql.init.platform=h2
-#
-#spring.h2.console.enabled=true
-##spring.h2.console.path=/h2-console
+
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.sql.init.platform=h2
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # ----------------------------------------------------------------- #
 # LOGGING #
@@ -90,8 +90,7 @@ spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Config JPA/Hibernate to auto create the tables. Only Enable for Development. Nvr turn on for Production. (Dev)
-# meant for sql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # ----------------------------------------------------------------- #
