--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -18,20 +18,20 @@ spring.application.name=cs203system
 #spring.datasource.username=ubuntu
 #spring.datasource.password=password
 
-#spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/database-1
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.username=postgres
-#spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/database-1
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
+spring.datasource.driver-class-name=org.postgresql.Driver
 # Specify explicitly the dialect (here for PostgreSQL, adapt for your database)
 
 
 # Disable Hibernate usage of JDBC metadata
-#spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # Database initialization should typically be performed outside of Spring lifecycle
 #spring.jpa.hibernate.ddl-auto=none
-#spring.sql.init.mode=never
+spring.sql.init.mode=never
 
 # Logging Configuration
 logging.level.com.cs203.cs203system.utility=DEBUG
@@ -39,14 +39,14 @@ logging.level.com.cs203.cs203system.utility=DEBUG
 
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=1234
-spring.sql.init.platform=h2
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=1234
+#spring.sql.init.platform=h2
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 # ----------------------------------------------------------------- #
 # LOGGING #
