--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -18,11 +18,12 @@ spring.application.name=cs203system
 #spring.datasource.username=ubuntu
 #spring.datasource.password=password
 
-spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/database-1
+spring.datasource.url=jdbc:postgresql://database-1.cnecmcwmig1r.ap-southeast-2.rds.amazonaws.com:5432/postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=lOcoatHK7t6QRbAB8sxJ
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Specify explicitly the dialect (here for PostgreSQL, adapt for your database)
 
 
@@ -30,7 +31,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # Database initialization should typically be performed outside of Spring lifecycle
-#spring.jpa.hibernate.ddl-auto=none
+
 spring.sql.init.mode=never
 
 # Logging Configuration
@@ -91,7 +92,8 @@ spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
 
 # Config JPA/Hibernate to auto create the tables. Only Enable for Development. Nvr turn on for Production. (Dev)
 # meant for sql
-spring.jpa.hibernate.ddl-auto=none
+#fking important
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 # ----------------------------------------------------------------- #
@@ -125,6 +127,8 @@ springdoc.api-docs.path=/api-docs
 #
 ## Change the default port from 8080 to a different port to avoid conflicts
 #server.port=8081
+#server.address=0.0.0.0
+server.port=8080
 
 #
 ## ----------------------------------------------------------------- #
@@ -164,3 +168,4 @@ logging.level.org.springframework.web.socket.server=DEBUG
 logging.level.org.springframework.messaging.simp=DEBUG
 logging.level.org.springframework.web.socket.messaging=DEBUG
 
+logging.level.org.springframework.security.web.firewall.StrictHttpFirewall=DEBUG
