--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,18 +53,13 @@ jobs:
               username: ${{ secrets.EC2_USER }}
               key: ${{ secrets.EC2_SSH_KEY }}
               script: |
-                
-                # Ensure the backend directory exists on EC2
-                mkdir -p /home/ubuntu/backend  # This will create the directory if it doesn’t exist
-                
-                # Navigate to the backend directory on EC2
-                cd /home/ubuntu/CS203/backend
+                mkdir -p ~/CS203/backend
 
-                # Stop the current backend service if running
-                pkill -f "your-application.jar" || true
+            # Copy the JAR file
+                scp -i ~/.ssh/new-ec2-key.pem build/libs/cs203system.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
 
-                # Copy the new JAR file to EC2 (this example assumes you're keeping the old JAR in place)
-                scp -i ~/.ssh/new-ec2-key.pem build/libs/your-application.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
-
-                # Run the new JAR file
-                nohup java -jar /home/ubuntu/CS203/backend/your-application.jar > output.log 2>&1 &
+            # Stop the current backend service if running
+                pkill -f "cs203system.jar" || true
+            
+            # Run the new JAR file
+                nohup java -jar /home/ubuntu/CS203/backend/cs203system.jar > output.log 2>&1 &
