update working directory for build jar

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build JAR
+        working-directory: cs203system/build/libs
         run: ./gradlew build
 
       - name: Archive JAR
