--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build JAR
-        working-directory: cs203system/build/libs
+        working-directory: cs203system
         run: ./gradlew build
 
       - name: Archive JAR
