--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Grant execute permission for gradlew
+        working-directory: cs203system
+        run: chmod +x gradlew
+        
       - name: Build JAR
         working-directory: cs203system
         run: ./gradlew build
