--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./gradlew build -x test
 
       - name: Rename JAR for Deployment
-        run: mv cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar cs203system.jar
+        run: mv cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ./cs203system.jar
 
 
 
@@ -72,7 +72,7 @@ jobs:
             mkdir -p ~/CS203/backend
             
             # Copy the JAR file to EC2
-            scp -i ~/.ssh/new-ec2-key.pem cs203system.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
+            scp -i ~/.ssh/new-ec2-key.pem ./cs203system.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
             
             # Stop the current backend service if running
             pkill -f "cs203system.jar" || true
