--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./gradlew build -x test
 
       - name: Rename JAR for Deployment
-        run: mv cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ./cs203system.jar
+        run: mv cs203system/build/libs/cs203system-0.0.1-SNAPSHOT-plain.jar ./cs203system.jar
 
           # New step to check the directory for the JAR file
       - name: Verify JAR file location
