--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,12 +51,9 @@ jobs:
       - name: Verify JAR file location
         run: ls cs203system/build/libs/
 
-      - name: Verify JAR exists
-        run: |
-          if [ ! -f ./cs203system.jar ]; then
-            echo "JAR file not found, build may have failed."
-            exit 1
-          fi
+          # Optional: Verify JAR file location (sanity check)
+      - name: Verify JAR file location
+        run: ls CS203/cs203system/build/libs/
 
 
   deploy:
@@ -79,7 +76,7 @@ jobs:
             mkdir -p ~/CS203/backend
             
             # Copy the JAR file to EC2
-            scp -i ~/.ssh/new-ec2-key.pem cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
+            scp -i ~/.ssh/new-ec2-key.pem CS203/cs203system/build/libs/cs203system-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/CS203/backend/
             
             # Stop the current backend service if running
             pkill -f "cs203system.jar" || true
