Added in checks to ensure file is being built

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Build JAR
+        working-directory: cs203system
+        run: ./gradlew build
+
       - name: Verify JAR file location
-        run: ls -la cs203system/build/libs/
+        run: ls   cs203system/build/libs/
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
         with:
