--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Grant execute permission for Gradle wrapper
+        working-directory: cs203system
+        run: chmod +x gradlew
+
       - name: Build JAR
         working-directory: cs203system
         run: ./gradlew build
