--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin' # or 'zulu' if you prefer that distribution
+
       - name: Grant execute permission for Gradle wrapper
         working-directory: cs203system
         run: chmod +x gradlew
