--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,13 @@ jobs:
       - name: Verify JAR file location
         run: ls -la cs203system/build/libs/
 
+      - name: Set up SSH key
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/new-ec2-key.pem
+          chmod 600 ~/.ssh/new-ec2-key.pem
+
       - name: Test SSH Connection
-        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/new-ec2-key.pem ubuntu@${{ secrets.EC2_SSH_key }} "echo SSH connection successful"
+        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/new-ec2-key.pem ubuntu@${{ secrets.EC2_SSH_KEY }} "echo SSH connection successful"
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
