--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           chmod 600 ~/.ssh/new-ec2-key.pem
 
       - name: Test SSH Connection
-        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/new-ec2-key.pem ubuntu@${{ secrets.EC2_SSH_KEY }} "echo SSH connection successful"
+        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/new-ec2-key.pem ubuntu@${{ secrets.EC2_HOST }} "echo SSH connection successful"
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
