--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,15 +80,13 @@ jobs:
 
       - name: Set up SSH key
         run: |
-          # Ensure the .ssh directory exists
           mkdir -p ~/.ssh
-          
-          # Write the SSH private key from GitHub Secrets and set correct permissions
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/my_key.pem
-          chmod 600 ~/.ssh/my_key.pem
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key.pem
+          chmod 600 ~/.ssh/ec2_key.pem
 
-      - name: Test SSH Connection
-        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/new-ec2-key.pem ubuntu@${{ secrets.EC2_HOST }} "echo SSH connection successful"
+      - name: Connect to EC2 and Run Command
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful'"
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.5
