Fixed and added more stuff

--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -63,17 +63,17 @@ spring.h2.console.path=/h2-console
 #spring.jpa.open-in-view=false
 
 # Add logging configs to display SQL statements (Dev)
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.orm.jdbc.bind=trace
-logging.level.org.hibernate.stat=debug
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.orm.jdbc.bind=trace
+#logging.level.org.hibernate.stat=debug
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Generate and log statistics (Dev)
-spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.generate_statistics=true
 
 # Log slow queries (Dev)
-spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
+#spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=3
 
 # Caching (Dev)
 #spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
