--- a/cs203system/build.gradle
+++ b/cs203system/build.gradle
@@ -14,6 +14,11 @@ java {
 	}
 }
 
+jar {
+	archiveBaseName = 'aws'  // You can set this to whatever you like
+	archiveVersion = '0.0.1-SNAPSHOT'
+}
+
 repositories {
 	mavenCentral()
 }
