--- a/cs203system/src/main/resources/application.properties
+++ b/cs203system/src/main/resources/application.properties
@@ -36,7 +36,7 @@ logging.level.com.cs203.cs203system.utility=DEBUG
 
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:file:/testdb
+spring.datasource.url=jdbc:h2:file:~/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=1234
